added stemming, not fully working yet

--- a/.env.development
+++ b/.env.development
@@ -1,6 +1,6 @@
 DB_HOST=192.168.0.21
 DB_USER=root
-DB_PASSWORD=raspberry
+DB_PASS=raspberry
 DB_DATABASE=ookie
 AMQP_HOST=192.168.0.22
 AMQP_PORT=5672
