--- a/.env
+++ b/.env
@@ -1,12 +1,12 @@
-DB_HOST=192.168.0.21
+DB_HOST=mysql.home.lan
 DB_USER=root
 DB_PASSWORD=raspberry
 DB_DATABASE=ookie
-AMQP_HOST=192.168.0.22
+AMQP_HOST=rabbitmq.home.lan
 AMQP_PORT=5672
 AMQP_PROTOCOL=amqp
-AMQP_USERNAME=root
-AMQP_PASSWORD=Ae27!6CdJc1_thEQ9
+AMQP_USERNAME=pi
+AMQP_PASSWORD=raspberry
 AMQP_LOCALE=en_US
 AMQP_FRAME_MAX=0
 AMQP_HEARTBEART=0
